bug fixes, but logo is still not responsive

--- a/wxapp/website/CSS/l_style.css
+++ b/wxapp/website/CSS/l_style.css
@@ -39,13 +39,9 @@
 
 .logo {
     grid-area: im;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .logo-img {
-    display: block;
     margin-left: auto;
     margin-right: auto;
     max-width: 50%;
