--- a/wxapp/website/CSS/m_style.css
+++ b/wxapp/website/CSS/m_style.css
@@ -42,13 +42,9 @@
 
 .logo {
     grid-area: im;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .logo-img {
-    display: block;
     margin-left: auto;
     margin-right: auto;
     max-width: 25%;
