--- a/wxapp/website/CSS/s_style.css
+++ b/wxapp/website/CSS/s_style.css
@@ -40,13 +40,9 @@
 
 .logo {
     grid-area: im;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .logo-img {
-    display: block;
     margin-left: auto;
     margin-right: auto;
     max-width: 10%;
